New Crowdin updates (#278)
* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (German)

* New translations cr

--- a/res/values-be-rBY/cr_strings.xml
+++ b/res/values-be-rBY/cr_strings.xml
@@ -122,4 +122,11 @@
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">Фон віджэта</string>
     <string name="hotseat_bg_summary">Напаўпразрысты фон ніжняй панэлі праграм</string>
+    <!-- AppInfo -->
+    <string name="app_info_subtext">Правядзіце пальцам уніз, каб закрыць інфармацыю аб праграме</string>
+    <string name="app_info_source">Крыніца</string>
+    <string name="app_info_source_system">Сістэма</string>
+    <string name="app_info_last_update">Апошняе абнаўленне</string>
+    <string name="app_info_version">Версія</string>
+    <string name="app_info_more">Яшчэ</string>
 </resources>
