--- a/res/values-nl-rNL/cr_strings.xml
+++ b/res/values-nl-rNL/cr_strings.xml
@@ -122,4 +122,11 @@
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">Hotseat achtergrond</string>
     <string name="hotseat_bg_summary">Voeg doorschijnende achtergrond toe aan het app dock</string>
+    <!-- AppInfo -->
+    <string name="app_info_subtext">Veeg omlaag om app informatie te sluiten</string>
+    <string name="app_info_source">Bron</string>
+    <string name="app_info_source_system">Systeem</string>
+    <string name="app_info_last_update">Laatste update</string>
+    <string name="app_info_version">Versie</string>
+    <string name="app_info_more">Meer</string>
 </resources>
