--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -122,4 +122,11 @@
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">Tło Docka</string>
     <string name="hotseat_bg_summary">Dodaje przezroczyste tło dla Doka</string>
+    <!-- AppInfo -->
+    <string name="app_info_subtext">Przesuń w dół, aby zamknąć informacje o aplikacji</string>
+    <string name="app_info_source">Źródło</string>
+    <string name="app_info_source_system">System</string>
+    <string name="app_info_last_update">Ostatnia aktualizacja</string>
+    <string name="app_info_version">Wersja</string>
+    <string name="app_info_more">Więcej</string>
 </resources>
