--- a/res/values-ru-rRU/cr_strings.xml
+++ b/res/values-ru-rRU/cr_strings.xml
@@ -122,4 +122,11 @@
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">Фон нижней панели</string>
     <string name="hotseat_bg_summary">Полупрозрачный фон нижней панели приложений</string>
+    <!-- AppInfo -->
+    <string name="app_info_subtext">Смахните вниз, чтобы закрыть информацию о приложении</string>
+    <string name="app_info_source">Источник</string>
+    <string name="app_info_source_system">Система</string>
+    <string name="app_info_last_update">Последнее обновление</string>
+    <string name="app_info_version">Версия</string>
+    <string name="app_info_more">Ещё</string>
 </resources>
