--- a/res/values-zh-rTW/cr_strings.xml
+++ b/res/values-zh-rTW/cr_strings.xml
@@ -122,4 +122,11 @@
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">底欄背景</string>
     <string name="hotseat_bg_summary">在底部的應用程式列顯示透明背景</string>
+    <!-- AppInfo -->
+    <string name="app_info_subtext">向下滑動關閉應用程式資訊</string>
+    <string name="app_info_source">安裝來源</string>
+    <string name="app_info_source_system">系統</string>
+    <string name="app_info_last_update">上次更新</string>
+    <string name="app_info_version">版本</string>
+    <string name="app_info_more">更多</string>
 </resources>
