--- a/res/xml/default_workspace_4x5.xml
+++ b/res/xml/default_workspace_4x5.xml
@@ -114,8 +114,8 @@
         launcher:x="0"
         launcher:y="-1" >
         <favorite
-            launcher:packageName="org.lineageos.snap"
-            launcher:className="com.android.camera.CameraActivity" />
+            launcher:packageName="org.lineageos.aperture"
+            launcher:className="org.lineageos.aperture.CameraLauncher" />
         <favorite
             launcher:packageName="com.android.camera2"
             launcher:className="com.android.camera.CameraActivity" />
