--- a/res/xml/dw_hotseat_6.xml
+++ b/res/xml/dw_hotseat_6.xml
@@ -72,8 +72,8 @@
         launcher:x="5"
         launcher:y="0" >
         <favorite
-            launcher:packageName="org.lineageos.snap"
-            launcher:className="com.android.camera.CameraActivity" />
+            launcher:packageName="org.lineageos.aperture"
+            launcher:className="org.lineageos.aperture.CameraLauncher" />
         <favorite
             launcher:packageName="com.android.camera2"
             launcher:className="com.android.camera.CameraActivity" />
