--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -21,19 +21,19 @@
     <string name="home_category_title">דף הבית</string>
     <string name="home_category_summary">הגדר את פאנל Google now כעת ועוד</string>
     <string name="icons_category_title">סמלים</string>
-    <string name="icons_category_summary">Set icon size and more</string>
+    <string name="icons_category_summary">הגדרת גודל הסמל ועוד</string>
     <string name="app_drawer_category_title">מגירת היישומים</string>
     <string name="app_drawer_category_summary">התאמה אישית של מגירת היישומים</string>
-    <string name="recents_category_title">Recents</string>
-    <string name="recents_category_summary">Revamp the overview screen</string>
+    <string name="recents_category_title">מהזמן האחרון</string>
+    <string name="recents_category_summary">ארגון מחדש של מסך התצוגה המסכמת</string>
     <string name="misc_category_title">שונות</string>
     <string name="misc_category_summary">אפשרויות נוספות</string>
     <string name="dev_options_title">אפשרויות מפתחים</string>
     <string name="dev_options_desc">אפשר כמה תכונות נסתרות על אחריותך בלבד</string>
-    <string name="general_category_title">General</string>
-    <string name="interface_category_title">Interface</string>
-    <string name="search_bar_category_title">Search bar</string>
-    <string name="actions_category_title">Quick actions</string>
+    <string name="general_category_title">כללי</string>
+    <string name="interface_category_title">ממשק</string>
+    <string name="search_bar_category_title">סרגל החיפוש</string>
+    <string name="actions_category_title">פעולות מהירות</string>
     <!-- Settings title to show Google Now at -1 screen on launcher. [CHAR LIMIT=50] -->
     <string name="title_show_google_app">החלק כדי לגשת לאפליקציה גוגל</string>
     <!-- Settings message explaining when the -1 screen is available on an LTR device. [CHAR LIMIT=100] -->
@@ -42,8 +42,8 @@
     <string name="msg_minus_one_on_right">בעת החלקה ימינה ממסך הבית</string>
     <!-- Folder titles -->
     <!-- Hide labels -->
-    <string name="desktop_show_labels">Icon labels on desktop</string>
-    <string name="drawer_show_labels">Icon labels in drawer</string>
+    <string name="desktop_show_labels">תוויות סמלים במסך הבית</string>
+    <string name="drawer_show_labels">תוויות סמלים במגירת היישומים</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">ערך: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">כברירת מחדל</string>
@@ -63,16 +63,16 @@
     <string name="label_lens">Google Lens</string>
     <string name="label_voice_search">חיפוש קולי</string>
     <string name="dock_search_title">סרגל החיפוש של Google</string>
-    <string name="dock_search_summary">Search bar in the bottom dock</string>
-    <string name="dock_theme_title">Themed icons</string>
-    <string name="dock_theme_summary">Use themed icons for search bar</string>
-    <string name="search_radius_title">Corner radius</string>
+    <string name="dock_search_summary">שורת חיפוש בסרגל התחתון</string>
+    <string name="dock_theme_title">סמלי ערכת הנושא</string>
+    <string name="dock_theme_summary">הצגת סמלי ערכת הנושא בשורת החיפוש</string>
+    <string name="search_radius_title">רדיוס הפינות</string>
     <!-- Recents -->
     <string name="action_lens">Lens</string>
     <!-- Homescreen Statusbar -->
-    <string name="show_statusbar_title">Status Bar</string>
+    <string name="show_statusbar_title">שורת מצב</string>
     <!-- Suggestions -->
-    <string name="suggestion_pref_screen_title">Suggestions</string>
+    <string name="suggestion_pref_screen_title">הצעות</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
     <!-- Trust apps -->
     <string name="trust_apps_manager_name">Hidden &amp; Protected apps</string>
