Launcher3: Map icon for MtkFMRadio
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -471,6 +471,7 @@
     <icon drawable="@drawable/florisboard" package="dev.patrickgold.florisboard" />
     <icon drawable="@drawable/fluffy" package="chat.fluffy.fluffychat" />
     <icon drawable="@drawable/flycast" package="com.flycast.emulator" />
+    <icon drawable="@drawable/fm_radio" package="com.android.fmradio" />
     <icon drawable="@drawable/fm_radio" package="com.caf.fmradio" />
     <icon drawable="@drawable/fng" package="com.fb.fluid" />
     <icon drawable="@drawable/focus_todo" package="com.superelement.pomodoro" />
