Changing the BGC camera icon
Adding a material icon for BGC camera

--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -203,6 +203,7 @@
     <icon drawable="@drawable/calculator" package="com.sec.android.app.popupcalculator" />
     <icon drawable="@drawable/calendar_30" package="com.android.calendar" />
     <icon drawable="@drawable/calendar_30" package="org.lineageos.etar" />
+    <icon drawable="@drawable/camera" package="com.android.MGC_8_4_600" />
     <icon drawable="@drawable/camera" package="app.grapheneos.camera" />
     <icon drawable="@drawable/camera" package="app.grapheneos.camera.play" />
     <icon drawable="@drawable/camera" package="com.GoogleCamera.Burial16" />
