New Crowdin updates (#288)
* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (

--- a/res/values-ru-rRU/cr_strings.xml
+++ b/res/values-ru-rRU/cr_strings.xml
@@ -70,7 +70,7 @@
     <!-- Recents -->
     <string name="action_lens">Объектив</string>
     <!-- Homescreen Statusbar -->
-    <string name="show_statusbar_title">Статус бар</string>
+    <string name="show_statusbar_title">Строка состояния</string>
     <!-- Suggestions -->
     <string name="suggestion_pref_screen_title">Рекомендации</string>
     <string name="suggestion_pref_screen_desc">Рекомендации в списке всех приложений и на главном экране</string>
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Последнее обновление</string>
     <string name="app_info_version">Версия</string>
     <string name="app_info_more">Ещё</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Тематические значки</string>
+    <string name="pref_themed_icons_summary">Следовать тематическим значкам, которые используются на главном экране</string>
 </resources>
