--- a/res/values-cs-rCZ/cr_strings.xml
+++ b/res/values-cs-rCZ/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Poslední aktualizace</string>
     <string name="app_info_version">Verze</string>
     <string name="app_info_more">Více</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Ikony motivů</string>
+    <string name="pref_themed_icons_summary">Follow themed icons used on home screen</string>
 </resources>
