--- a/res/values-de-rDE/cr_strings.xml
+++ b/res/values-de-rDE/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Letzte Aktualisierung</string>
     <string name="app_info_version">Version</string>
     <string name="app_info_more">Mehr</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Symboldesigns</string>
+    <string name="pref_themed_icons_summary">Stil der Symboldesigns auf dem Startbildschirm folgen</string>
 </resources>
