--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Last update</string>
     <string name="app_info_version">Version</string>
     <string name="app_info_more">More</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">סמלילי ערכת הנושא</string>
+    <string name="pref_themed_icons_summary">התאמת סמלילים לערכת הנושא בשימוש במסך הבית</string>
 </resources>
