--- a/res/values-nl-rNL/cr_strings.xml
+++ b/res/values-nl-rNL/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Laatste update</string>
     <string name="app_info_version">Versie</string>
     <string name="app_info_more">Meer</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Thema pictogrammen</string>
+    <string name="pref_themed_icons_summary">Volg gethematiseerde pictogrammen gebruikt op startscherm</string>
 </resources>
