--- a/res/values-pt-rPT/cr_strings.xml
+++ b/res/values-pt-rPT/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Última atualização</string>
     <string name="app_info_version">Versão</string>
     <string name="app_info_more">Mais</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Ícones temáticos</string>
+    <string name="pref_themed_icons_summary">Seguir ícones temáticos usados no ecrã inicial</string>
 </resources>
