--- a/res/values-ro-rRO/cr_strings.xml
+++ b/res/values-ro-rRO/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Ultima actualizare</string>
     <string name="app_info_version">Versiune</string>
     <string name="app_info_more">Mai mult</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Pictograme cu aspect</string>
+    <string name="pref_themed_icons_summary">Urmărește pictogramele tematice utilizate pe ecranul de pornire</string>
 </resources>
