--- a/res/values-uk-rUA/cr_strings.xml
+++ b/res/values-uk-rUA/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">Останнє оновлення</string>
     <string name="app_info_version">Версія</string>
     <string name="app_info_more">Більше</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">Іконки з темами</string>
+    <string name="pref_themed_icons_summary">Слідкувати за темами іконок, що використовуються на головному екрані</string>
 </resources>
