--- a/res/values-zh-rTW/cr_strings.xml
+++ b/res/values-zh-rTW/cr_strings.xml
@@ -129,4 +129,7 @@
     <string name="app_info_last_update">上次更新</string>
     <string name="app_info_version">版本</string>
     <string name="app_info_more">更多</string>
+    <!-- All apps themed icons -->
+    <string name="pref_themed_icons_title">圖示套用主題色</string>
+    <string name="pref_themed_icons_summary">將應用程式抽屜中的圖示也套用主題色</string>
 </resources>
