--- a/res/values-fr-rFR/cr_strings.xml
+++ b/res/values-fr-rFR/cr_strings.xml
@@ -18,12 +18,12 @@
     <!-- Application name -->
     <!-- Settings -->
     <!-- Edit workspace -->
-    <string name="settings_lock_layout_title">Lock layout</string>
-    <string name="settings_lock_layout_summary_on">Icons and widgets can\'t be added, removed and moved on the homescreen</string>
-    <string name="settings_lock_layout_summary_off">Icons and widgets can be added, removed and moved on the homescreen</string>
-    <string name="settings_edit_widgets_error">It\'s not possible to add widgets to the home screen</string>
+    <string name="settings_lock_layout_title">Verrouiller la mise en page</string>
+    <string name="settings_lock_layout_summary_on">Les icônes et widgets ne peuvent pas être ajoutés, supprimés ou déplacés sur l\'écran d\'accueil</string>
+    <string name="settings_lock_layout_summary_off">Les icônes et widgets peuvent être ajoutés, supprimés ou déplacés sur l\'écran d\'accueil</string>
+    <string name="settings_edit_widgets_error">Il n\'est pas possible d\'ajouter des widgets à l\'écran d\'accueil</string>
     <!-- Settings title to show Google Now at -1 screen on launcher. [CHAR LIMIT=50] -->
-    <string name="title_show_google_app">Swipe to access Google app</string>
+    <string name="title_show_google_app">Glisser pour accéder à l\'application Google</string>
     <!-- Settings message explaining when the -1 screen is available on an LTR device. [CHAR LIMIT=100] -->
     <string name="msg_minus_one_on_left">When you swipe right from main home screen</string>
     <!-- Settings message explaining when the -1 screen is available on an RTL device. [CHAR LIMIT=100] -->
@@ -38,7 +38,7 @@
     <string name="trust_apps_auth_open_app">Authenticate to open %1$s</string>
     <string name="trust_apps_loading">Loading\u2026</string>
     <string name="trust_apps_no_lock_error">Please set up a secure lock screen to restrict app access</string>
-    <string name="trust_apps_help">Help</string>
+    <string name="trust_apps_help">Aide</string>
     <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
     <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
     <!-- General -->
@@ -46,21 +46,21 @@
     <!-- Categories -->
     <string name="home_category_title">Home screen</string>
     <string name="home_category_summary">Set Google now panel and more</string>
-    <string name="icons_category_title">Icons</string>
+    <string name="icons_category_title">Icônes</string>
     <string name="icons_category_summary">Set icon size and more</string>
     <string name="app_drawer_category_title">App drawer</string>
     <string name="app_drawer_category_summary">Customize your app drawer</string>
     <string name="recents_category_title">Recents</string>
     <string name="recents_category_summary">Revamp the overview screen</string>
-    <string name="misc_category_title">Miscellaneous</string>
+    <string name="misc_category_title">Divers</string>
     <string name="misc_category_summary">Other options</string>
-    <string name="general_category_title">General</string>
+    <string name="general_category_title">Général</string>
     <string name="interface_category_title">Interface</string>
     <string name="quickspace_category_title">Quickspace</string>
     <string name="search_bar_category_title">Search bar</string>
     <string name="actions_category_title">Quick actions</string>
     <!-- Developer options -->
-    <string name="dev_options_title">Developer options</string>
+    <string name="dev_options_title">Options développeur</string>
     <string name="dev_options_summary">Enable some hidden features at your own risk</string>
     <!-- Pause apps shortcut -->
     <string name="pause">Pause</string>
@@ -70,7 +70,7 @@
     <string name="paused_apps_dialog_message">%1$s was directly paused from the launcher</string>
     <string name="paused_apps_drop_target_label">Pause app</string>
     <!-- Icon pack -->
-    <string name="icon_pack_title">Icon pack</string>
+    <string name="icon_pack_title">Pack d\'icônes</string>
     <string name="icon_pack_default_label">Default</string>
     <string name="icon_pack_add">Install more</string>
     <string name="icon_pack_no_market">There\'s no available app store</string>
@@ -80,17 +80,17 @@
     <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
     <string name="custom_seekbar_default_value_is_set">Default value is set</string>
     <!-- Icon size -->
-    <string name="icon_size_title">Icon size</string>
+    <string name="icon_size_title">Taille des icônes</string>
     <!-- Font size -->
-    <string name="font_size_title">Font size</string>
+    <string name="font_size_title">Taille de police</string>
     <!-- App label - max lines -->
-    <string name="icon_max_lines_title">Max lines for app label</string>
+    <string name="icon_max_lines_title">Nombre maximum de ligne pour les noms d\'application</string>
     <!-- Hotseat searchbar -->
-    <string name="label_search">Search</string>
+    <string name="label_search">Rechercher</string>
     <string name="label_lens">Google Lens</string>
-    <string name="label_voice_search">Voice search</string>
-    <string name="dock_search_title">Google search bar</string>
-    <string name="dock_search_summary">Search bar in the bottom dock</string>
+    <string name="label_voice_search">Recherche vocale</string>
+    <string name="dock_search_title">Barre de recherche Google</string>
+    <string name="dock_search_summary">Barre de recherche dans le dock inférieur</string>
     <string name="dock_theme_title">Themed icons</string>
     <string name="dock_theme_summary">Use themed icons for search bar</string>
     <string name="search_radius_title">Corner radius</string>
@@ -98,10 +98,10 @@
     <string name="hotseat_bg_title">Hotseat background</string>
     <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
     <!-- DT2S -->
-    <string name="pref_sleep_gesture_title">Double tap to sleep</string>
-    <string name="pref_sleep_gesture_summary">Double tap on empty space for screen off</string>
+    <string name="pref_sleep_gesture_title">Double appui pour mettre en veille</string>
+    <string name="pref_sleep_gesture_summary">Double appui sur un espace vide pour éteindre l\'écran</string>
     <!-- Wallpaper scrolling -->
-    <string name="allow_wallpaper_scrolling">Wallpaper scrolling</string>
+    <string name="allow_wallpaper_scrolling">Défilement du fond d\'écran</string>
     <string name="allow_wallpaper_scrolling_summary">Wallpaper scrolling effect for multiple screens</string>
     <!-- Wallpaper zooming -->
     <string name="allow_wallpaper_zooming">Wallpaper zooming</string>
@@ -119,7 +119,7 @@
     <string name="show_quickspace_title">At A Glance</string>
     <string name="show_quickspace_summary">Show at the top of your home screen</string>
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Welcome to crDroid!</string>
+    <string name="quick_event_rom_intro_welcome">Bienvenue sur crDroid !</string>
     <string-array name="welcome_message_variants">
         <item>Have a great day</item>
         <item>Thank you for choosing us</item>
@@ -136,16 +136,16 @@
     <string name="quickspace_now_playing_title">Now playing</string>
     <string name="quickspace_now_playing_summary">Show the song you\'re playing</string>
     <!-- Quickspace alternative view -->
-    <string name="quickspace_alternate_style_title">Minimalistic style</string>
+    <string name="quickspace_alternate_style_title">Style minimaliste</string>
     <string name="quickspace_alternate_style_summary">Switch to modern style</string>
     <!-- Quickspace PSA - Custom messages for the glance -->
-    <string name="quickspace_psa_title">Random messages</string>
+    <string name="quickspace_psa_title">Messages aléatoires</string>
     <string name="quickspace_psa_summary">Make your companion more lively with random messages</string>
     <string-array name="quickspace_psa_morning">
-        <item>Good morning!</item>
+        <item>Bonjour !</item>
         <item>Good morning, time to rock!</item>
-        <item>What a beautiful day!</item>
-        <item>Have a nice day!</item>
+        <item>Quelle belle journée !</item>
+        <item>Passez une bonne journée !</item>
         <item>What about a small 5 minutes nap?</item>
         <item>That\'s one way to wake up.</item>
         <item>You should change your alarm sounds.</item>
@@ -154,39 +154,39 @@
         <item>Check the weather just in case</item>
         <item>Feeling a bit sleepy yet</item>
         <item>Have you looked outside yet?</item>
-        <item>Let\'s get this done.</item>
+        <item>Occupons-nous de cela.</item>
     </string-array>
     <string-array name="quickspace_psa_evening">
-        <item>Good night!</item>
-        <item>Sleep well!</item>
-        <item>See you tomorrow!</item>
-        <item>Sweet dreams!</item>
-        <item>Don\'t stay up too long</item>
+        <item>Bonne nuit !</item>
+        <item>Dormez bien !</item>
+        <item>À demain !</item>
+        <item>Faites de beaux rêves !</item>
+        <item>Ne vous couchez pas trop tard</item>
         <item>Have a good sleep</item>
-        <item>Get some sleep</item>
-        <item>Time to relax</item>
-        <item>Enjoy the night!</item>
-        <item>Time to charge the batteries!</item>
-        <item>Tomorrow might be a great day</item>
-        <item>Get your bones ready for tomorrow</item>
+        <item>Allez dormir un peu</item>
+        <item>C\'est le moment de se détendre</item>
+        <item>Profitez de la nuit!</item>
+        <item>Il est temps de recharger les batteries !</item>
+        <item>Demain sera peut-être un grand jour</item>
+        <item>Préparez-vous pour demain</item>
     </string-array>
     <string-array name="quickspace_psa_midnight">
-        <item>Um... good night?</item>
-        <item>It\'s a bit late now</item>
+        <item>Euh... bonne nuit?</item>
+        <item>C\'est un peu tard</item>
         <item>You should fix your sleep schedule</item>
         <item>Are you more productive at this time?</item>
     </string-array>
     <string-array name="quickspace_psa_random">
-        <item>Ignorance is Bliss</item>
+        <item>Heureux sont les ignorants</item>
         <item>Is it time to flash another update already?</item>
-        <item>Make peace, not war</item>
-        <item>Oh hey, what\'s up?</item>
-        <item>Focus on your tasks</item>
-        <item>How many screenshots do you take?</item>
+        <item>Faire la paix, pas la guerre</item>
+        <item>Salut ! Quoi de neuf ?</item>
+        <item>Concentrez-vous sur vos tâches</item>
+        <item>Combien de captures d\'écran prenez-vous ?</item>
         <item>Open goodness with crDroid</item>
         <item>Spread love, not havoc</item>
         <item>We didn\'t start the fire!</item>
-        <item>Time for some good music</item>
+        <item>Il est temps d\'écouter de la bonne musique</item>
         <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C HEAD</item>
         <item>You need crDroid Premium to see this</item>
         <item>Remember the Lineage of the Unicorn</item>
@@ -216,16 +216,16 @@
     <string name="suggestion_pref_screen_title">Suggestions</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
     <!-- QuickSpace: QuickEvent: Weather -->
-    <string name="quick_event_ambient_weather_title">Weather condition</string>
-    <string name="quick_event_ambient_weather_summary">Display current weather condition and temperature</string>
-    <string name="quick_event_ambient_weather_enabled_info">Requires weather service to be enabled</string>
+    <string name="quick_event_ambient_weather_title">Conditions météo</string>
+    <string name="quick_event_ambient_weather_summary">Afficher les conditions météo actuelles et la température</string>
+    <string name="quick_event_ambient_weather_enabled_info">Nécessite que le service météo soit activé</string>
     <!-- Background opacity -->
-    <string name="background_opacity_title">Background opacity</string>
+    <string name="background_opacity_title">Opacité de l\'arrière-plan</string>
     <!-- Taskbar -->
-    <string name="pref_allow_phone_taskbar_title">Use taskbar</string>
+    <string name="pref_allow_phone_taskbar_title">Utiliser la barre des tâches</string>
     <string name="pref_allow_phone_taskbar_summary">For opening and switching apps anywhere</string>
     <!-- Recents icons -->
-    <string name="recents_screenshot_title">Screenshot</string>
+    <string name="recents_screenshot_title">Capture d\'écran</string>
     <string name="recents_clear_all_title">Clear all</string>
     <string name="recents_lens_title">Lens</string>
     <!-- All apps themed icons -->
