--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -42,7 +42,7 @@
     <string name="trust_apps_info_hidden">Ukryte aplikacje oraz ich widżety są ukryte na liście aplikacji</string>
     <string name="trust_apps_info_protected">Chronione aplikacje wymagają uwierzytelnienia, aby je otworzyć z ekranu głównego</string>
     <!-- General -->
-    <string name="settings_title">Home settings</string>
+    <string name="settings_title">Ustawienia ekranu głównego</string>
     <!-- Categories -->
     <string name="home_category_title">Ekran główny</string>
     <string name="home_category_summary">Ustaw panel Google Now i więcej</string>
@@ -80,74 +80,74 @@
     <string name="custom_seekbar_default_value_to_set">Wartość domyślna: <xliff:g id="v">%s</xliff:g>\nPrzytrzymaj dłużej by ustawić</string>
     <string name="custom_seekbar_default_value_is_set">Domyślna wartość jest ustawiona</string>
     <!-- Icon size -->
-    <string name="icon_size_title">Icon size</string>
+    <string name="icon_size_title">Rozmiar ikony</string>
     <!-- Font size -->
-    <string name="font_size_title">Font size</string>
+    <string name="font_size_title">Rozmiar czcionki</string>
     <!-- App label - max lines -->
-    <string name="icon_max_lines_title">Max lines for app label</string>
+    <string name="icon_max_lines_title">Maksymalna ilość linii dla etykiety aplikacji</string>
     <!-- Hotseat searchbar -->
-    <string name="label_search">Search</string>
-    <string name="label_lens">Google Lens</string>
-    <string name="label_voice_search">Voice search</string>
-    <string name="dock_search_title">Google search bar</string>
-    <string name="dock_search_summary">Search bar in the bottom dock</string>
-    <string name="dock_theme_title">Themed icons</string>
-    <string name="dock_theme_summary">Use themed icons for search bar</string>
-    <string name="search_radius_title">Corner radius</string>
+    <string name="label_search">Szukaj</string>
+    <string name="label_lens">Obiektyw Google</string>
+    <string name="label_voice_search">Wyszukiwanie głosowe</string>
+    <string name="dock_search_title">Pasek wyszukiwania Google</string>
+    <string name="dock_search_summary">Pasek wyszukiwania w dolnym panelu</string>
+    <string name="dock_theme_title">Ikony dostosowane do motywu</string>
+    <string name="dock_theme_summary">Użyj ikon dostosowanych do motywu dla paska wyszukiwania</string>
+    <string name="search_radius_title">Zaokrąglenie rogów</string>
     <!-- Hotseat Background -->
-    <string name="hotseat_bg_title">Hotseat background</string>
-    <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
+    <string name="hotseat_bg_title">Tło Docka</string>
+    <string name="hotseat_bg_summary">Dodaj przezroczyste tło dla Docka</string>
     <!-- DT2S -->
-    <string name="pref_sleep_gesture_title">Double tap to sleep</string>
-    <string name="pref_sleep_gesture_summary">Double tap on empty space for screen off</string>
+    <string name="pref_sleep_gesture_title">Dotknij dwukrotnie, aby uśpić</string>
+    <string name="pref_sleep_gesture_summary">Dotknij dwukrotnie w puste miejsce, aby wyłączyć ekran</string>
     <!-- Wallpaper scrolling -->
-    <string name="allow_wallpaper_scrolling">Wallpaper scrolling</string>
-    <string name="allow_wallpaper_scrolling_summary">Wallpaper scrolling effect for multiple screens</string>
+    <string name="allow_wallpaper_scrolling">Przewijane tapety</string>
+    <string name="allow_wallpaper_scrolling_summary">Efekt przewijania tapety dla wielu ekranów</string>
     <!-- Wallpaper zooming -->
-    <string name="allow_wallpaper_zooming">Wallpaper zooming</string>
-    <string name="allow_wallpaper_zooming_summary">Zoom in or out the wallpaper when using drawer or recent apps</string>
+    <string name="allow_wallpaper_zooming">Powiększanie tapety</string>
+    <string name="allow_wallpaper_zooming_summary">Powiększ lub pomniejsz tapetę podczas używania szuflady lub ostatnio używanych aplikacji</string>
     <!-- Homescreen Statusbar -->
-    <string name="show_statusbar_title">Status Bar</string>
+    <string name="show_statusbar_title">Pasek stanu</string>
     <!-- Top shadow -->
-    <string name="show_top_shadow">Top shadow</string>
+    <string name="show_top_shadow">Górny cień</string>
     <!-- Row Height -->
-    <string name="row_height_title">Row height</string>
+    <string name="row_height_title">Wysokość wiersza</string>
     <!-- Background blur -->
-    <string name="background_blur_title">Background blur depth</string>
-    <string name="background_blur_summary">Set blur depth level for recents and app drawer</string>
+    <string name="background_blur_title">Głębia rozmycia tła</string>
+    <string name="background_blur_summary">Ustaw poziom głębokości rozmycia dla ostatnich aplikacji i szuflady aplikacji</string>
     <!-- QuickSpace -->
-    <string name="show_quickspace_title">At A Glance</string>
-    <string name="show_quickspace_summary">Show at the top of your home screen</string>
+    <string name="show_quickspace_title">W skrócie</string>
+    <string name="show_quickspace_summary">Pokaż w górnej części ekranu głównego</string>
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Welcome to crDroid!</string>
+    <string name="quick_event_rom_intro_welcome">Witaj w crDroid!</string>
     <string-array name="welcome_message_variants">
-        <item>Have a great day</item>
-        <item>Thank you for choosing us</item>
-        <item>Loving us? Send us a beer</item>
-        <item>Best Rom Ever.</item>
-        <item>Say hi to us on Telegram</item>
-        <item>Tap here to begin</item>
-        <item>We love you 3000</item>
+        <item>Pięknego dnia</item>
+        <item>Dziękujemy za wybranie nas</item>
+        <item>Lubisz nas? Kup nam piwo</item>
+        <item>Najlepszy system wszechczasów.</item>
+        <item>Przywitaj się z nami na Telegramie</item>
+        <item>Dotknij tutaj, aby rozpocząć</item>
+        <item>Kochamy cię 3000</item>
     </string-array>
     <!-- QuickSpace: QuickEvent: Ambient Play -->
-    <string name="quick_event_ambient_now_playing">Now Playing</string>
-    <string name="quick_event_ambient_song_artist">%1$s by %2$s</string>
+    <string name="quick_event_ambient_now_playing">Teraz odtwarzane</string>
+    <string name="quick_event_ambient_song_artist">%1$s od %2$s</string>
     <!-- Quickspace Now Playing -->
-    <string name="quickspace_now_playing_title">Now playing</string>
-    <string name="quickspace_now_playing_summary">Show the song you\'re playing</string>
+    <string name="quickspace_now_playing_title">Teraz odtwarzane</string>
+    <string name="quickspace_now_playing_summary">Pokaż odtwarzany utwór</string>
     <!-- Quickspace alternative view -->
-    <string name="quickspace_alternate_style_title">Minimalistic style</string>
-    <string name="quickspace_alternate_style_summary">Switch to modern style</string>
+    <string name="quickspace_alternate_style_title">Styl minimalistyczny</string>
+    <string name="quickspace_alternate_style_summary">Przełącz na styl nowoczesny</string>
     <!-- Quickspace PSA - Custom messages for the glance -->
-    <string name="quickspace_psa_title">Random messages</string>
-    <string name="quickspace_psa_summary">Make your companion more lively with random messages</string>
+    <string name="quickspace_psa_title">Losowe wiadomości</string>
+    <string name="quickspace_psa_summary">Ożyw swojego towarzysza losowymi wiadomościami</string>
     <string-array name="quickspace_psa_morning">
-        <item>Good morning!</item>
-        <item>Good morning, time to rock!</item>
-        <item>What a beautiful day!</item>
-        <item>Have a nice day!</item>
-        <item>What about a small 5 minutes nap?</item>
-        <item>That\'s one way to wake up.</item>
+        <item>Dzień dobry!</item>
+        <item>Dzień dobry, czas dać czadu!</item>
+        <item>Co za piękny dzień!</item>
+        <item>Miłego dnia!</item>
+        <item>A może 5-cio minutowa drzemka?</item>
+        <item>To jest sposób na pobudkę.</item>
         <item>Powinieneś zmienić dźwięk swojego alarmu.</item>
         <item>Zapowiada się piękny dzień, nieprawdaż?</item>
         <item>Zajmijmy się tym.</item>
@@ -204,31 +204,31 @@
         <item>Ukojenie twojej paranoi</item>
         <item>Wypróbuj lodowe desery</item>
         <item>Ale cudowne doświadczenie, nieprawdaż?</item>
-        <item>Evolution is a myth, right?</item>
-        <item>You are what you flash, don\'t be Potato</item>
-        <item>What\'s on your mind?</item>
+        <item>Ewolucja jest mitem, prawda?</item>
+        <item>Jesteś tym co wgrywasz, nie bądź frajerem</item>
+        <item>O czym myślisz?</item>
         <item>Expecto Patronum</item>
-        <item>Wubba Lubba Dub Dub</item>
-        <item>Winner Winner ....?</item>
+        <item>Łabudi dajda łabudi daj</item>
+        <item>Zwycięzca Zwycięzca....?</item>
         <item>rm -rf \/</item>
     </string-array>
     <!-- Suggestions -->
-    <string name="suggestion_pref_screen_title">Suggestions</string>
-    <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+    <string name="suggestion_pref_screen_title">Propozycje</string>
+    <string name="suggestion_pref_screen_desc">Sugestie dotyczące wszystkich aplikacji i ekranu głównego</string>
     <!-- QuickSpace: QuickEvent: Weather -->
-    <string name="quick_event_ambient_weather_title">Weather condition</string>
-    <string name="quick_event_ambient_weather_summary">Display current weather condition and temperature</string>
-    <string name="quick_event_ambient_weather_enabled_info">Requires weather service to be enabled</string>
+    <string name="quick_event_ambient_weather_title">Warunki pogodowe</string>
+    <string name="quick_event_ambient_weather_summary">Pokaż bieżące warunki pogodowe i temperaturę</string>
+    <string name="quick_event_ambient_weather_enabled_info">Wymaga włączenia usługi pogodowej</string>
     <!-- Background opacity -->
-    <string name="background_opacity_title">Background opacity</string>
+    <string name="background_opacity_title">Przezroczystość tła</string>
     <!-- Taskbar -->
-    <string name="pref_allow_phone_taskbar_title">Use taskbar</string>
-    <string name="pref_allow_phone_taskbar_summary">For opening and switching apps anywhere</string>
+    <string name="pref_allow_phone_taskbar_title">Użyj paska zadań</string>
+    <string name="pref_allow_phone_taskbar_summary">Do otwierania i przełączania aplikacji gdziekolwiek</string>
     <!-- Recents icons -->
-    <string name="recents_screenshot_title">Screenshot</string>
-    <string name="recents_clear_all_title">Clear all</string>
-    <string name="recents_lens_title">Lens</string>
+    <string name="recents_screenshot_title">Zrzut ekranu</string>
+    <string name="recents_clear_all_title">Wyczyść wszystko</string>
+    <string name="recents_lens_title">Obiektyw</string>
     <!-- All apps themed icons -->
-    <string name="pref_themed_icons_title">Themed icons</string>
-    <string name="pref_themed_icons_summary">Follow themed icons used on home screen</string>
+    <string name="pref_themed_icons_title">Ikony dostosowane do motywu</string>
+    <string name="pref_themed_icons_summary">Dopasuj ikony dostosowane do motywu na ekranie głównym</string>
 </resources>
