--- a/res/values/cr_config.xml
+++ b/res/values/cr_config.xml
@@ -33,4 +33,7 @@
 
     <!-- Quickspace -->
     <item type="id" name="reserved_container_workspace" />
+
+    <!-- Icon pack -->
+    <string name="icon_pack_settings_class" translatable="false">com.android.launcher3.icons.pack.IconPackSettingsFragment</string>
 </resources>
